acomodacion de links de asociaicon

--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -16,6 +16,7 @@
             <a href="../usuarios/registrar.html" class="header__link">Registrar usuario</a>
             <a href="../usuarios/listar.html" class="header__link">Listar usuarios</a>
             <a href="../homes/home-ciclo.html" class="header__link">Ciclo Cultivo</a>
+            <a href="../vizualisar/html/practica.html" class="header__link">Asociacion</a>
         </nav>
     </header>
 
