--- a/fronted/public/views/vizualisar/html/habilitar_deshabilitar.html
+++ b/fronted/public/views/vizualisar/html/habilitar_deshabilitar.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilitar / Deshabilitar Asociación</title>
-    <link rel="stylesheet" href="/Lembo//vizualisar/css/styleprac.css">
-    <link rel="stylesheet" href="/Lembo/vizualisar/css/habilitar.css">
+    <link rel="stylesheet" href="../css/styleprac.css">
+    <link rel="stylesheet" href="../css/habilitar.css">
     </head>
 <body class="pagina">
     <header class="cabecera">
         <div class="cabecera__logo">
-            <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="cabecera__logo-img">
+            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
-            <a href="#" class="cabecera__enlace">Inicio</a>
+            <a href="practica.html" class="cabecera__enlace">Inicio</a>
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
             <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
             <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar </a>
