--- a/fronted/public/views/vizualisar/html/listar_asociaciones.html
+++ b/fronted/public/views/vizualisar/html/listar_asociaciones.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Registros de Cultivos</title>
-    <link rel="stylesheet" href="/Lembo/vizualisar/css/styleprac.css">
-    <link rel="stylesheet" href="/Lembo/vizualisar/css/listar_asociacion.css">
+    <link rel="stylesheet" href="../css/styleprac.css">
+    <link rel="stylesheet" href="../css/listar_asociacion.css">
 </head>
 <body class="pagina listar-registros-fondo">
     <header class="cabecera">
         <div class="cabecera__logo">
-            <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="cabecera__logo-img">
+            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
-            <a href="#" class="cabecera__enlace">Inicio</a>
+            <a href="practica.html" class="cabecera__enlace">Inicio</a>
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
             <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar</a>
             <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar</a>
             <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar/Deshabilitar</a>
             <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
             <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
-            <a href="practica.html" class="cabecera__enlace">Inicio</a>
         </nav>
     </header>
     <main class="principal listar-registros-principal">
