--- a/fronted/public/views/vizualisar/html/practica.html
+++ b/fronted/public/views/vizualisar/html/practica.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentación de Cultivos</title>
-    <link rel="stylesheet" href="/Lembo/vizualisar/css/styleprac.css">
+    <link rel="stylesheet" href="../css/styleprac.css">
 </head>
 <body class="pagina">
     <header class="cabecera">
         <div class="cabecera__logo">
-            <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="cabecera__logo-img">
+            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
-            <a href="#" class="cabecera__enlace">Inicio</a>
+            <a href="/fronted/public/views/homes/index.html" class="cabecera__enlace">Inicio</a>
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
             <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
             <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar </a>
@@ -35,7 +35,7 @@
                 </p>
             </div>
             <div class="hero-sec__der">
-                <img src="/Lembo/imagenes proyecto/Buenas-practicas-del-cafe.jpg" alt="Imagen de Cultivos" class="hero-sec__img">
+                <img src="/fronted/public/img/cultivos-de-cafe-morrones.jpg" alt="Imagen de Cultivos" class="hero-sec__img">
             </div>
         </section>
         <section class="estilos">
@@ -45,7 +45,7 @@
                     <div class="info-contenido">
                         <div class="info-contenido__izq">
                             <p class="info-contenido__texto">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <img src="/fronted/public/img/Fotos-portada-17-1-800x445.png" alt="Planta" class="info-contenido__img">
                             <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                         </div>
                         <div class="info-contenido__der">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="tarjeta__contenedor-img">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
+                        <img src="/fronted/public/img/granos.webp" alt="Estilo Infografía" class="tarjeta__img">
                     </div>
                 </div>
                 <div class="tarjeta estilo-info">
@@ -63,7 +63,7 @@
                     <div class="info-contenido">
                         <div class="info-contenido__izq">
                             <p class="info-contenido__texto">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <img src="/fronted/public/img/fondocampo.jpg" alt="Planta" class="info-contenido__img">
                             <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                         </div>
                         <div class="info-contenido__der">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="tarjeta__contenedor-img">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
+                        <img src="/fronted/public/img/Ripe-cherries_sarahemcc.jpg" alt="Estilo Infografía" class="tarjeta__img">
                     </div>
                 </div>
                 <div class="tarjeta estilo-info">
@@ -81,7 +81,7 @@
                     <div class="info-contenido">
                         <div class="info-contenido__izq">
                             <p class="info-contenido__texto">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <img src="/fronted/public/img/Ripe-cherries_sarahemcc.jpg" alt="Planta" class="info-contenido__img">
                             <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                         </div>
                         <div class="info-contenido__der">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="tarjeta__contenedor-img">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
+                        <img src="/fronted/public/img/images (2).jpeg" alt="Estilo Infografía" class="tarjeta__img">
                     </div>
                 </div>
             </div>
