--- a/fronted/public/views/vizualisar/html/practica.html
+++ b/fronted/public/views/vizualisar/html/practica.html
@@ -16,8 +16,8 @@
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
             <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
             <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar </a>
-            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar/Deshabilitar</a>
-            <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
+            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar</a>
+            <a href="listar_asociaciones.html" class="cabecera__enlace">Listar </a>
             <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
         </nav>
     </header>
