--- a/fronted/public/views/vizualisar/html/generar_reporte.html
+++ b/fronted/public/views/vizualisar/html/generar_reporte.html
@@ -12,11 +12,11 @@
             <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
-            <a href="practica.html" class="cabecera__enlace">Inicio</a>
+            <a href="/fronted/public/views/homes/index.html" class="cabecera__enlace">Inicio</a>
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
-            <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
-            <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar </a>
-            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar/Deshabilitar</a>
+            <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar Asociación</a>
+            <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar Asociación</a>
+            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar</a>
             <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
             <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
         </nav>
